# templates

./: .emacs  Beamer.tex  [HTML]index.html  [PHP]Class.php  org-reveal.org
CMake/: CMakeLists.txt  CMakeListsOPENCV.txt
LaTeX/: TikZ.tex  article.tex  articleFR.tex  articleJP.tex  poster.tex  preamble.tex  presentation.tex  tabular.tex
Python/: pyMacro.py
